Corrected (to test again)

--- a/templates/tutoring_learning_unit_year.html
+++ b/templates/tutoring_learning_unit_year.html
@@ -146,7 +146,7 @@
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
 <script>
     window.onload = function () {
-        $('#learning_unit_year_id').empty();
+        //?? $('#learning_unit_year_id').empty();
         var session_number = document.getElementById('id_sessions_number');
         var session_duration = document.getElementById('id_sessions_duration');
         var series_number = document.getElementById('id_series_number');
@@ -160,6 +160,7 @@
         series_number.onchange = trigFunc;
     };
 
+/* test jog
 $(function() {
   $("#search_learning_units_year").autocomplete({
 	source: "/assistants/assistant/form/part2/get_learning_units_year/",
@@ -178,7 +179,7 @@ $(function() {
         .appendTo( ul );
     };
 });
-/* test jog
+
   $(':input[name$=test]').on('change', function() {
       // test var val_array = $(this).find("option:selected").val().split('|');
       // useful? var prefix = $(this).getFormPrefix();
