Correction for error tracking and review design

--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -132,44 +132,62 @@
                  <label for="txt_other_status">{% trans 'Other status' %}</label>
                  {{ form.other_status }}<span class="error">{{ form.other_status.errors }}</span>
             </div>
-            <div class="panel-default">
-                <div class="panel-heading">
-                    <h4>{% trans 'Report of the steering committee (mandatory from the second renewal application)' %}</h4>
-                </div>
-            </div>
-            {% for file in files %}
-                <div class="row" style="padding-top: 15px;">
-                    <div class="col-md-10" id="hdn_filename" style="text-align: left">
-                       <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">{{ file.document_file }}</a>
-                    </div>
-                    <div class="col-md-2" style="text-align: left">
-                        <a class="btn btn-default btn-danger btn-sm" id="btn_delete_file" style="margin-right: 5px;"
-                           title="{% trans 'Delete file'%}"
-                           onclick="location.href='{% url 'delete_pdf_file' file.id 'mandate_read' mandate.id %}';">
-                        <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
-                            {% trans 'Delete' %}</a>
-                    </div>
-                </div>
-            {% endfor %}
-
-            <div class="form-group" style="padding-top: 15px;">
-                <a href="{% url 'upload_pdf_file' mandate.id %}" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#form-ajax-modal" title="{% trans 'Add file'%}">{% trans 'Attach a PDF file' %}</a>
-            </div>
-
             <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
-            <button type="submit" class="btn btn-primary" title="{% trans 'Save'%}" id="bt_mandate_save"><span class="far fa-save" aria-hidden="true"></span> {% trans 'Save'%}</button>
+            <button type="submit" class="btn btn-primary" title="{% trans 'Save' %}" id="bt_mandate_save"><span
+                    class="far fa-save" aria-hidden="true"></span> {% trans 'Save' %}</button>
             <a class="btn btn-default" id="lnk_mandate_cancel" href="{% url 'mandates_list' %}">
-                <span class="fas fa-times" aria-hidden="true"></span> {% trans 'Cancel'%}</a>
+                <span class="fas fa-times" aria-hidden="true"></span> {% trans 'Cancel' %}</a>
         </form>
-{#  Jog  Already in page ?? #}
+        </br>
+        <div class="panel-default">
+            <div class="panel-heading">
+                <h4>{% trans 'Report of the steering committee (mandatory from the second renewal application)' %}</h4>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="row" style="padding-top: 15px;">
+                <div class="col-md-4" style="text-align: left">
+                    <a class="btn btn-lg btn-primary"
+                       data-toggle="modal" data-target="#form-ajax-modal" id="btn_upload_pdf"
+                       title="{% trans 'Add file' %}"
+                       href="{% url 'upload_pdf_file' mandate.id %}">
+                        {% trans 'Attach a PDF file' %}
+                    </a>
+                </div>
+                {% if error_upload %}
+                    <div class="col-md-2" style="text-align: left">
+                        {{ error_upload }}
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        {% for file in files %}
+            <div class="row" style="padding-top: 15px;">
+                <div class="col-md-4" id="hdn_filename" style="text-align: left">
+                    <a href="{% url 'assistant_file_download' document_file_id=file.id %}"
+                       class="no_spinner">{{ file.document_file }}</a>
+                </div>
+                <div class="col-md-2" style="text-align: left">
+                    <a class="btn btn-default btn-danger btn-sm " style="margin-right: 5px;"
+                       title="{% trans 'Delete file' %}"
+                       onclick="if($('form').data('changed')) {alert('Please save your change before');}
+                                else {location.href='{% url 'delete_pdf_file' file.id 'mandate_read' mandate.id %}';}">
+                        <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
+                        {% trans 'Delete' %}</a>
+                </div>
+            </div>
+        {% endfor %}
+
+{#  Jog Tag Already in page WHY ?? #}
 {#        <!-- Modal HTML -->#}
 {#        <div id="myModal" class="modal fade">#}
 {#            <div class="modal-dialog">#}
 {#                <div class="modal-content">#}
-{#                    <!-- Content will be loaded here from ... -->#}
+{#                   ... -->#}
 {#                </div>#}
 {#            </div>#}
 {#        </div>#}
+
     </div>
 </div>
 
@@ -182,6 +200,19 @@ window.onload = function() {
     $('#person_id').empty();
 };
 
+$("form").data("changed",false);
+$('form').find('*').on('change', function() {
+   $("form").data("changed",true);
+});
+$(document).ready(function () {
+    $("#btn_upload_pdf").click(function (event) {
+        if($('form').data('changed')==true) {
+            alert('Please save your change before');
+            event.preventDefault();
+            event.stopImmediatePropagation();
+        }
+    });
+});
 $(function() {
     $("#search_persons").autocomplete({
         source: "/assistants/api/get_persons/",
