--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -170,7 +170,7 @@
                 <div class="col-md-4" style="text-align: left">
                     <a class="btn btn-default btn-danger btn-sm " style="margin-right: 5px;"
                        title="{% trans 'Delete file' %}"
-                       onclick="if($('form').data('changed')) {alert('Please save your change before');}
+                       onclick="if($('form').data('changed')) {alert('{% trans 'Please save your change or cancel.' %}');}
                                 else {location.href='{% url 'delete_pdf_file' file.id 'mandate_read' mandate.id %}';}">
                         <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
                         {% trans 'Delete' %}</a>
@@ -207,7 +207,7 @@ $('form').find('*').on('change', function() {
 $(document).ready(function () {
     $("#btn_upload_pdf").click(function (event) {
         if($('form').data('changed')==true) {
-            alert('Please save your change before');
+            alert('{% trans 'Please save your change or cancel.' %}');
             event.preventDefault();
             event.stopImmediatePropagation();
         }
