--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -150,7 +150,7 @@
                     <a class="btn btn-default"
                        data-toggle="modal" data-target="#form-ajax-modal" id="btn_upload_pdf"
                        title="{% trans 'Add file' %}"
-                       href="{% url 'upload_pdf_file' mandate.id %}">
+                       href="{% url 'upload_pdf_file' mandate_id=mandate.id %}">
                         <span class="fas fa-arrow-circle-up" aria-hidden="true" id="spn_add_file"></span>{% trans 'Attach a PDF file' %}
                     </a>
                 </div>
@@ -171,7 +171,7 @@
                     <a class="btn btn-default btn-danger btn-sm " style="margin-right: 5px;"
                        title="{% trans 'Delete file' %}"
                        onclick="if($('form').data('changed')) {alert('{% trans 'Please save your change in the form at first or cancel.' %}');}
-                                else {location.href='{% url 'delete_pdf_file' file.id 'mandate_read' mandate.id %}';}">
+                                else {location.href='{% url 'delete_pdf_file' document_file_id=file.id url='mandate_read' mandate_id=mandate.id %}';}">
                         <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
                         {% trans 'Delete' %}</a>
                 </div>
