--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -151,8 +151,7 @@
                     <div class="col-md-4" style="text-align: left">
                         <a class="btn btn-default btn-danger btn-sm " style="margin-right: 5px;"
                            title="{% trans 'Delete file' %}"
-                           onclick="if($('form').data('changed')) { alert('{% trans 'Please save your change in the form at first or cancel.'%}');}
-                                    else {location.href='{% url 'delete_pdf_file' file.id 'mandate_read' mandate.id %}';}">
+                           onclick="if (formIsChanged()){location.href='{% url 'delete_pdf_file' file.id 'mandate_read' mandate.id %}';}">
                             <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
                             {% trans 'Delete' %}</a>
                     </div>
@@ -179,6 +178,16 @@ $("form").data("changed",false);
 $('form').find('*').on('change', function() {
    $("form").data("changed",true);
 });
+function formIsChanged() {
+    if($('form').data('changed')) {
+        alert("{% trans 'Please save your change in the form at first or cancel.'%}");
+        return false;
+    }
+    else {
+        return true;
+    }
+}
+
 $(function() {
     $("#search_persons").autocomplete({
         source: "/assistants/api/get_persons/",
