--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -52,12 +52,12 @@
     <div class="panel-body">
         <form method="post" action=" {% url 'assistant_mandate_change_state' %} ">
             {% csrf_token %}
-            <div class="row" style="display: inline;float: none;">
-                <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-6" style="vertical-align: middle;">
                     <h3>{{ mandate.assistant }} ({{ mandate.assistant.person.gender }})</h3>
                 </div>
 
-                <div class="col-sm-6" style="text-align: right;">
+                <div class="col-sm-6" style="text-align: right;vertical-align: bottom;">
                     {% if mandate.state == "TO_DO" %}
                         <input type="hidden" id="hdn_change_state_mandate_id" name="mandate_id" value="{{ mandate.id }}">
                         <button type="submit" class="btn btn-danger" title="{% trans 'Refuse'%}" id="bt_mandate_decline"
