--- a/templates/assistant_form_part5.html
+++ b/templates/assistant_form_part5.html
@@ -110,7 +110,7 @@
             </div>
         <div class="form-group">
             <label for="{{ form.events_organisation_service.id_for_label }}">
-                {% trans "Organization of seminars, conferences, visits, study tours, grounds, seminars… (not taken in account in the 'Teaching units' section)" %}</label>
+                {% trans "Organization of seminars, conferences, visits, study tours, grounds, seminars... (not taken in account in the 'Teaching units' section)" %}</label>
             {{ form.events_organisation_service }}
             <font class="error">{{ form.events_organisation_service.errors }}</font>
         </div>
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label style="padding-top: 5px" for="{{ form.formations.id_for_label }}">{% trans 'Scientific, pedagogical or other training you have attended (LLL, SMCS, RHUM, Summer School)' %}</label>
+            <label style="padding-top: 5px" for="{{ form.formations.id_for_label }}">{% trans 'Scientific, pedagogical or other training you have attended...(LLL, SMCS, RHUM, Summer School)' %}</label>
             <div class="controls">{{ form.formations }}</div>
             <font class="error">{{ form.formations.errors }}</font>
         </div>
