--- a/templates/manager_assistant_form_view.html
+++ b/templates/manager_assistant_form_view.html
@@ -433,7 +433,7 @@
             </div>
             <div class="row" style="padding-top: 2px;">
                 <div class="col-md-8">
-                    {% trans "Organization of seminars, conferences, visits, study tours, grounds, seminars… (not taken in account in the 'Teaching units' section)" %}
+                    {% trans "Organization of seminars, conferences, visits, study tours, grounds, seminars... (not taken in account in the 'Teaching units' section)" %}
                 </div>
                 <div class="col-md-4">
                     {{ mandate.events_organisation_service }}
@@ -464,7 +464,7 @@
         <div class="form-group" style="padding-top: 10px;">
             <div class="row" style="padding-top: 2px;">
                 <div class="col-md-3">
-                    {% trans 'Scientific, pedagogical or other training you have attended (LLL, SMCS, RHUM, Summer School)' %}
+                    {% trans 'Scientific, pedagogical or other training you have attended...(LLL, SMCS, RHUM, Summer School)' %}
                 </div>
                 <div class="col-md-9">
                     {{ mandate.formations|default_if_none:"n/a" }}
